--- a/public/css/views/flights/prepros-6.config
+++ b/public/css/views/flights/prepros-6.config
@@ -17,7 +17,14 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "style.less",
+      "imports": [
+        "search.less"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
