Flights page complete and responsive

--- a/public/css/framework/prepros-6.config
+++ b/public/css/framework/prepros-6.config
@@ -14,6 +14,14 @@
     {
       "path": "less/animations/bounce-out.less",
       "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "less/layout/container.less",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
+    },
+    {
+      "path": "less/base/base.less",
+      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
     }
   ],
   "fileTree": {
@@ -26,7 +34,8 @@
       "less",
       "less/base",
       "less/index",
-      "less/animations"
+      "less/animations",
+      "less/layout"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
