--- a/public/css/views/flights/prepros-6.config
+++ b/public/css/views/flights/prepros-6.config
@@ -21,7 +21,8 @@
     {
       "path": "style.less",
       "imports": [
-        "search.less"
+        "search.less",
+        "flight.less"
       ]
     }
   ],
