--- a/public/css/framework/prepros-6.config
+++ b/public/css/framework/prepros-6.config
@@ -31,11 +31,11 @@
       "css/layout",
       "css/base",
       "css/animations",
-      "less",
       "less/base",
       "less/index",
       "less/animations",
-      "less/layout"
+      "less/layout",
+      "less"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
