Checkout progress. checkout form created but no payment method

--- a/public/css/views/checkout/prepros-6.config
+++ b/public/css/views/checkout/prepros-6.config
@@ -1,44 +1,10 @@
 {
-  "name": "framework",
+  "name": "checkout",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [
-    {
-      "path": "css/base/base.css",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
-    },
-    {
-      "path": "css/animations/bounce-out.css",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
-    },
-    {
-      "path": "less/animations/bounce-out.less",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
-    },
-    {
-      "path": "less/layout/container.less",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
-    },
-    {
-      "path": "less/base/base.less",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
-    }
-  ],
+  "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [
-      "css/index",
-      "css/modules",
-      "css/layout",
-      "css/base",
-      "css/animations",
-      "less/base",
-      "less/index",
-      "less/animations",
-      "less/layout",
-      "less",
-      "less/vars",
-      "less/modules"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -51,30 +17,7 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [
-    {
-      "path": "less/index/index.less",
-      "imports": [
-        "less/base/base.less",
-        "less/layout/general.less",
-        "less/layout/fonts.less",
-        "less/layout/gaps.less",
-        "less/layout/shadows.less",
-        "less/layout/grid.less",
-        "less/layout/container.less",
-        "less/layout/width-height.less",
-        "less/layout/alignments.less",
-        "less/vars/media.less",
-        "less/vars/sizes.less",
-        "less/vars/colors.less",
-        "less/modules/buttons.less",
-        "less/modules/cards.less",
-        "less/modules/split.less",
-        "less/modules/inputs.less",
-        "less/animations/bounce-out.less"
-      ]
-    }
-  ],
+  "imports": [],
   "projectView": {
     "selectedView": "file-tree"
   },
@@ -117,7 +60,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7886,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
