Refactored navigation bar

--- a/public/css/views/nav/prepros-6.config
+++ b/public/css/views/nav/prepros-6.config
@@ -4,7 +4,11 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "cart",
+      "mobile-nav",
+      "main"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
