--- a/public/css/views/flights/flight/prepros-6.config
+++ b/public/css/views/flights/flight/prepros-6.config
@@ -17,17 +17,9 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [
-    {
-      "path": "style.less",
-      "imports": [
-        "search.less",
-        "flight.less"
-      ]
-    }
-  ],
+  "imports": [],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -68,7 +60,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7885,
+    "port": 7887,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
