--- a/public/css/views/flights/prepros-6.config
+++ b/public/css/views/flights/prepros-6.config
@@ -1,45 +1,10 @@
 {
-  "name": "framework",
+  "name": "flights",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [
-    {
-      "path": "css/base/base.css",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
-    },
-    {
-      "path": "css/animations/bounce-out.css",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
-    },
-    {
-      "path": "less/animations/bounce-out.less",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
-    },
-    {
-      "path": "less/layout/container.less",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
-    },
-    {
-      "path": "less/base/base.less",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
-    },
-    {
-      "path": "less/vars/colors.less",
-      "configJson": "{\"forceCompile\":true,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-less\":{\"enabled\":true},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":true}}"
-    }
-  ],
+  "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [
-      "css/index",
-      "css/modules",
-      "css/layout",
-      "css/base",
-      "css/animations",
-      "less/index",
-      "less",
-      "less/vars",
-      "less/modules"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -54,25 +19,10 @@
   },
   "imports": [
     {
-      "path": "less/index/index.less",
+      "path": "style.less",
       "imports": [
-        "less/base/base.less",
-        "less/layout/general.less",
-        "less/layout/fonts.less",
-        "less/layout/gaps.less",
-        "less/layout/shadows.less",
-        "less/layout/grid.less",
-        "less/layout/container.less",
-        "less/layout/width-height.less",
-        "less/layout/alignments.less",
-        "less/vars/media.less",
-        "less/vars/sizes.less",
-        "less/vars/colors.less",
-        "less/modules/buttons.less",
-        "less/modules/cards.less",
-        "less/modules/split.less",
-        "less/modules/inputs.less",
-        "less/animations/bounce-out.less"
+        "search.less",
+        "flight.less"
       ]
     }
   ],
@@ -118,7 +68,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7885,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
