Fixed issue with flight width

--- a/public/css/framework/prepros-6.config
+++ b/public/css/framework/prepros-6.config
@@ -38,7 +38,8 @@
       "less/index",
       "less",
       "less/vars",
-      "less/modules"
+      "less/modules",
+      "less/layout"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
